Se agrego cdn a bootstrap y chard

--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,2 @@
-@import 'DashBoard/node_modules/bootstrap/dist/css/bootstrap.min.css'
+/* @import 'DashBoard/node_modules/bootstrap/dist/css/bootstrap.min.css' */
 
